Ref. fields in 2 cols

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
@@ -19,8 +19,9 @@
   #if($viewOnly)
 	  <p>$referencedData</p>
   #else
-    #if(!$singleColumn) <br /> #end
-    $referencedData
+    #if(!$singleColumn) <p>$referencedData</p>
+    #else $referencedData
+    #end
   #end  
 #else
 	#set($referencedData = false)
