Ref. fields in 2 cols

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
@@ -19,9 +19,7 @@
   #if($viewOnly)
 	  <p>$referencedData</p>
   #else
-    #if(!$singleColumn) <p>$referencedData</p>
-    #else $referencedData
-    #end
+    <p style="line-height:1.5em">$referencedData</p>
   #end  
 #else
 	#set($referencedData = false)
