Ref. fields in 2 cols

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
@@ -19,7 +19,7 @@
   #if($viewOnly)
 	  <p>$referencedData</p>
   #else
-    <p style="line-height:1.5em">$referencedData</p>
+    <p style="line-height:1.5em; color: black">$referencedData</p>
   #end  
 #else
 	#set($referencedData = false)
