Two col layout: tooltip field descriptions

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -42,7 +42,7 @@
   #end
   #set($fieldClass = $field.getClass().getSimpleName())
   ## inline-block workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=549114
-  <div class="row" #if(($field.getContentSize() > 50) || ($fieldValue.length() > 100)) style="display:inline-block" #end>
+  <div title="$field.getFieldDescription()" class="row" #if(($field.getContentSize() > 50) || ($fieldValue.length() > 100)) style="display:inline-block" #end>
     #if(!$fieldClass.equals("RelationFieldDefn") && ($fieldCategory != "FILE"))
       ## relation and file field names included in resources/input/relation.vm
       <span class="fieldname">$field</span>
