Serverside report map configuration

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/default_pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/default_pane3.vm
@@ -20,7 +20,8 @@ $viewTools.startTimer("gui/reports_and_tables/default_pane3")
 
 #set($tabs=[])
 #set($styles=[])
-#set($success=$tabs.add({'tabName':'view', 'tabSource':'gui/reports_and_tables/tabs/view'}))
+#set($success=$tabs.add({'tabName':'view', 'tabSource':'gui/reports_and_tables/tabs/map'}))
+###set($success=$tabs.add({'tabName':'view', 'tabSource':'gui/reports_and_tables/tabs/view'}))
 #if($view.loggedInUserAllowedTo('EDIT_TABLE_DATA',$sessionData.getTable()))
 	#set($success=$tabs.add({'tabName':'edit', 'tabSource':'gui/reports_and_tables/tabs/edit'}))
 #end
