--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
@@ -1,1 +1,21 @@
-Map here
+#set($report = $sessionData.getReport())
+<div id="mapcontrol">
+  Map setup:
+  <form method="POST" action="AppController.servlet">
+    <input type="hidden" name="return" value="gui/tabs/map" />
+    <input type="hidden" name="update_map" value="true" />
+    <table style="border:0">
+      <tr>
+        <td>Postcode field:</td>
+        <td>
+          <select name="postcodefieldinternalname">
+            <option value="">Please choose a field...</option>
+            #foreach($reportField in $report.getReportFields())
+              <option value="$reportField.getInternalFieldName()">$reportField</option>
+            #end
+          </select>
+        </td>
+      </tr>
+    </table>
+  </form>
+</div>
