--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
@@ -57,6 +57,12 @@
           </select>
         </td>
       </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td>
+          <input type="submit" name="submit">Update map</input>
+        </td>
+      </tr>
     </table>
   </form>
 </div>
