--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
@@ -60,7 +60,7 @@
       <tr>
         <td>&nbsp;</td>
         <td>
-          <input type="submit" name="submit">Update map</input>
+          <input type="submit" name="submit" value="Update map" />
         </td>
       </tr>
     </table>
