--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
@@ -15,7 +15,7 @@
 <div id="mapcontrol">
   Map setup:
   <form method="POST" action="AppController.servlet">
-    <input type="hidden" name="return" value="gui/tabs/map" />
+    <input type="hidden" name="return" value="gui/reports_and_tables/tabs/map" />
     <input type="hidden" name="update_map" value="true" />
     <table style="border:0">
       <tr>
