--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
@@ -2,14 +2,14 @@
 #set($reportFields = $report.getReportFields())
 #set($map = $report.getMap())
 #set($postcodeField = $map.getPostcodeField())
-#if(!$postcodeField)
-  #foreach($reportField in $reportFields)
-    #set($cleanName = $viewTools.cleanString($reportField.getFieldName()))
-    #if($cleanName == "postcode")
-      #set($postcodeField = $reportField)
-    #end
-  #end
-#end
+###if(!$postcodeField)
+##  #foreach($reportField in $reportFields)
+##    #set($cleanName = $viewTools.cleanString($reportField.getFieldName()))
+##    #if($cleanName == "postcode")
+##      #set($postcodeField = $reportField)
+##    #end
+##  #end
+###end
 #set($colourField = $map.getColourField())
 #set($categoryField = $map.getCategoryField())
 <div id="mapcontrol">
@@ -33,7 +33,7 @@
       </td>
     </tr>
     <tr>
-      <td>Colour by:</td>
+      <td>Group (colour) by:</td>
       <td>
         <form method="POST" action="AppController.servlet">
           <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
@@ -68,3 +68,4 @@
     </tr>
   </table>
 </div>
+<div id="map_canvas"></div>
