--- a/gtpb_clientside/WEB-INF/templates/gui/resources/pane3_tab_set.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/pane3_tab_set.vm
@@ -212,17 +212,21 @@
     #end
 	#end		
 	#if(($pane2_id) && (!$mobile_device))
-  	  <script language=Javascript>
-	  	  var rowFound = parent.pane_2.fSetRowSelection('$pane2_id');
-	  	  if ((!rowFound) && ($currentTab < 3)) {
-	  		  jQuery.get("?return=gui/reports_and_tables/tabs/edit_warning", appendWarning);
-	  	  }
-  	  </script>
+	  <script language=Javascript>
+  	  var rowFound = parent.pane_2.fSetRowSelection('$pane2_id');
+  	  if ((!rowFound) && ($currentTab < 3)) {
+  		  jQuery.get("?return=gui/reports_and_tables/tabs/edit_warning", appendWarning);
+  	  }
+	  </script>
 	#end
   #parse('gui/resources/google_maps_api_key.vm')
 	#if($google_maps_api_key)
-    <script src="http://maps.google.com/maps?file=api&v=2&key=$google_maps_api_key&sensor=false" type="text/javascript"></script>
-	#end
+    #if($viewTools.getAppUrl().startsWith("https"))
+      <script src="https://maps.google.com/maps?file=api&v=2&key=$google_maps_api_key&sensor=false" type="text/javascript"></script>
+    #else
+      <script src="http://maps.google.com/maps?file=api&v=2&key=$google_maps_api_key&sensor=false" type="text/javascript"></script>
+    #end
+  #end
   </head>
   <body>
   	<div class="wrapper tab-interface" id="gtpb_wrapper">    	
