--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -845,3 +845,8 @@ div#reportData {
     top: 1em;
     z-index: 100; /* on top of the chart */
   }  
+
+  #map_canvas {
+    width: 100%;
+    height: 600px;
+  }
