--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -847,6 +847,8 @@ div#reportData {
   }  
 
   #map_canvas {
-    width: 100%;
+    width: 95%;
     height: 600px;
+    margin-left: auto;
+    margin-right: auto;
   }
