--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/map.vm
@@ -14,11 +14,7 @@
 #set($categoryField = $map.getCategoryField())
 <div id="map_canvas"></div>
 <div id="mapcontrol">
-  Map setup:
-  <table style="border:0">
-    <tr>
-      <td>Postcode field:</td>
-      <td>
+      Postcode field:
         <form method="POST" action="AppController.servlet">
           <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
           <input type="hidden" name="update_map" value="true" />
@@ -31,11 +27,7 @@
             #end
           </select>
         </form>
-      </td>
-    </tr>
-    <tr>
-      <td>Group (colour) by:</td>
-      <td>
+      Group (colour) by:
         <form method="POST" action="AppController.servlet">
           <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
           <input type="hidden" name="update_map" value="true" />
@@ -48,11 +40,7 @@
             #end
           </select>
         </form>
-      </td>
-    </tr>
-    <tr>
-      <td>Categorise by:</td>
-      <td>
+      Categorise by:
         <form method="POST" action="AppController.servlet">
           <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
           <input type="hidden" name="update_map" value="true" />
@@ -65,7 +53,4 @@
             #end
           </select>
         </form>
-      </td>
-    </tr>
-  </table>
 </div>
