--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -97,6 +97,6 @@
 			</span>
 		</div>
     </div>
-    <iframe id="oViewPane" name="oViewPane" src="AppController.servlet?return=gui/display_panes" frameborder=no scrolling=yes></iframe>
+    <iframe id="oViewPane" mozallowfullscreen="true" name="oViewPane" src="AppController.servlet?return=gui/display_panes" frameborder=no scrolling=yes></iframe>
     </body>		
 </html>
